{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 8,
  "lineage": "1be74008-5ce1-bc71-bcde-d06d515daf3e",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ziyotek_devops_all_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:security-group/sg-02bffb98bb48829d6",
            "description": "allow all sg-in-sbx1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bffb98bb48829d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC-sbx1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sbx1-Devops allow all security group",
            "name_prefix": "",
            "owner_id": "323741042377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0351133815357e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:internet-gateway/igw-082f1aba00838d31b",
            "id": "igw-082f1aba00838d31b",
            "owner_id": "323741042377",
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            },
            "vpc_id": "vpc-0d0351133815357e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "training",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:route-table/rtb-0bdc1bb5d2d6ebdc5",
            "id": "rtb-0bdc1bb5d2d6ebdc5",
            "owner_id": "323741042377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082f1aba00838d31b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0351133815357e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a55ad70a433cea5d",
            "route_table_id": "rtb-0bdc1bb5d2d6ebdc5",
            "subnet_id": "subnet-08f23e7bfa1009e35"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.training",
            "module.vpc.aws_subnet.devops_subnet_1",
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-08f23e7bfa1009e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f23e7bfa1009e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            },
            "vpc_id": "vpc-0d0351133815357e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-0df8dbd100483a2a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df8dbd100483a2a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            },
            "vpc_id": "vpc-0d0351133815357e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ziyotek_devops"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ziyotek_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:vpc/vpc-0d0351133815357e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ebcd0e41a4378a57",
            "default_route_table_id": "rtb-06bde4bbc32946030",
            "default_security_group_id": "sg-0033aa0911b35351f",
            "dhcp_options_id": "dopt-0010276e6bba6ec5d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0351133815357e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bde4bbc32946030",
            "owner_id": "323741042377",
            "tags_all": {
              "Environment": "sbx1",
              "Name": "ziyotek-jenkins-class-worker"
            }
          }
        }
      ]
    }
  ]
}